hard-gists/7634c596fe7669a54321/run.log
=== Docker Run Log for 7634c596fe7669a54321 ===
Started at: Mi 29. Okt 17:13:56 CET 2025

[2025-10-29 17:13:57] START: Running container for 7634c596fe7669a54321
[2025-10-29 17:13:57] SUCCESS: Container 8d185c0997917064ce30b0186ed6737aa3bd86fa44c0c6d342b0a6489f0fc8cb started for 7634c596fe7669a54321
=== Container logs for 7634c596fe7669a54321 ===
  File "/snippet.py", line 35
    print json.dumps(resp)
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7634c596fe7669a54321 ===
[2025-10-29 17:13:59] INFO: Container 8d185c0997917064ce30b0186ed6737aa3bd86fa44c0c6d342b0a6489f0fc8cb has stopped
